--- a/nodejs_chonyuumon/ch02/3/index.ejs
+++ b/nodejs_chonyuumon/ch02/3/index.ejs
@@ -18,10 +18,9 @@ body {
     </style>
   </head>
   <body>
-    <h1>Index</h1>
+    <h1><%=title %></h1>
     <div role="main">
-      <p>This is Index Page.</p>
-      <p>これは、EJSを使ったWebページです</p>
+      <p><%=content %></p>
     </div>
   </body>
 </html>
