[Add] Chapter03 - Section 1 - data transmission by form

--- a/nodejs_chonyuumon/ch03/1/index.ejs
+++ b/nodejs_chonyuumon/ch03/1/index.ejs
@@ -11,7 +11,14 @@
     <div role="main">
       <!-- Get from app.js -->
       <p><%=content %></p>
-      <p><a href="/other">Other Page に移動 &gt;&gt;</a></p>
+      <!-- Input Form -->
+      <form method="post" action="/other">
+        <!-- Post transmission to "/others" -->
+        <p>
+          <input type="text" name="msg">
+          <input type="submit" value="Click">
+        </p>
+      </form>
     </div>
   </body>
 </html>
