--- a/nodejs_chonyuumon/ch03/1/other.ejs
+++ b/nodejs_chonyuumon/ch03/1/other.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title><%=title %></title>
-    <link type="text/css" href="./style.css" rel="stylesheet">
+    <!-- <link type="text/css" href="./style.css" rel="stylesheet"> -->
   </head>
   <body>
     <h1><%=title %></h1>
