--- a/nodejs_chonyuumon/ch03/1/index.ejs
+++ b/nodejs_chonyuumon/ch03/1/index.ejs
@@ -19,6 +19,13 @@
           <input type="submit" value="Click">
         </p>
       </form>
+      <p>
+        <table>
+          <% for (var key in data) { %>
+          <%- include( 'data_item',{ key: key, val: [ data[key] ] } ) %>
+          <% } %>
+        </table>
+      </p>
     </div>
   </body>
 </html>
