--- a/nodejs_chonyuumon/ch03/1/index.ejs
+++ b/nodejs_chonyuumon/ch03/1/index.ejs
@@ -22,7 +22,7 @@
       <p>
         <table>
           <% for (var key in data) { %>
-          <%- include( 'data_item',{ key: key, val: [ data[key] ] } ) %>
+          <%- include( 'data_item',{ key: key, val: [ data[key] ] } ) -%>
           <% } %>
         </table>
       </p>
