--- a/nodejs_chonyuumon/ch03/1/other.ejs
+++ b/nodejs_chonyuumon/ch03/1/other.ejs
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title><%=title %></title>
-    <!-- <link type="text/css" href="./style.css" rel="stylesheet"> -->
+    <link type="text/css" href="./style.css" rel="stylesheet">
   </head>
   <body>
     <h1><%=title %></h1>
     <div role="main">
-      <p><%=content %></p>
+      <p>
+        <table>
+          <% for (var key in data) { %>
+            <%- include( 'data_item',{ key: key, val: data[key] } ) -%>
+          <% } %>
+        </table>
+      </p>
     </div>
   </body>
 </html>
