[Update] Chapter3 - Section2 - cookie / nodejs_chonyuumon/ch03/2/

--- a/nodejs_chonyuumon/ch03/2/index.ejs
+++ b/nodejs_chonyuumon/ch03/2/index.ejs
@@ -20,14 +20,20 @@
         </table>
       </p>
       <!------------------------------------------------------------------------------------>
+      <!-- Get cookie data ----------------------------------------------------------------->
+      <!------------------------------------------------------------------------------------>
+      <p>your last message : <%= cookie_data %></p>
+      <!------------------------------------------------------------------------------------>
       <!-- Input Form -->
       <!------------------------------------------------------------------------------------>
       <p>
         <form method="post" action="/">
           <!-- Post transmission to "/others" -->
-          MESSAGE 
-          <input type="text" name="msg">
-          <input type="submit" value="Submit">
+          <p>
+            MESSAGE 
+            <input type="text" name="msg">
+            <input type="submit" value="Submit">
+          </p>
         </form>
       </p>
     </div>
